<resources>
    <string name="app_name">THE EDC</string>
    <string name="button6">Modify</string>
    <string name="edit">Edit shelter site or  assembly point</string>
    <string name="button7">Supervisor</string>
    <string name="textView">EDC</string>
    <string name="textView2">Home Page </string>
    <string name="button5">Notification</string>
    <string name="butt1">Modify</string>
    <string name="butt2">shelter</string>
    <string name="butt3">assembly point</string>
    <string name="backbutt">back</string>
    <string name="smsbutt">SMS</string>
    <string name="appbutt">Through the application</string>
    <string name="msgtxt">Enter the massage </string>
    <string name="cancel">cancel</string>
    <string name="send">Send</string>
    <string name="upload">Upload attachments </string>
    <string name="textView3">If you are requesting assistance please contact the following icon directly or send an e-mail</string>
    <string name="callbutt">call</string>
    <string name="emailbutt">send email</string>
    <string name="login">login</string>//fdf

    <string name="textView4">THE EDC</string>

    <string name="textView5">Emergency And Disaster Center</string>
    <string name="recovery">Restore password ?</string>
    <string name="cancel_but">cancel</string>
    <string name="logbutt">login</string>//ض1
    <string name="username">supervisor id </string>
    // idon' know if supervisor id or user name
    <string name="passwordtext">Password</string>
    <string name="member_but">KAU Member</string>
    <string name="mapimg">KAU map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home_page">Home page</string>
    <string name="what_to_do">Awareness materials</string>
    <string name="who">who are we?</string>// need edit
    <string name="call_us">Call us </string>
    <string name="map">Map</string>

    <string name="about_us">Who are we</string>

    <string name="about_us_text"> This application serves the staff of King Abdul Aziz University to help them find the nearst shelters site and assembly points in the case of disasters and emergencies and facilitate the communicate with the center within the University.
</string>
    <!-- Strings related to edc page  -->

    <string name="about_edc">About EDC</string>
    <string name="vision">Vision</string>
    <string name="edc_vision">Excellence in Emergency and Disaster Management.</string>
    <string name="mission">Mission</string>
    <string name="edc_mission">Continually enhance the university readiness to reduce the impact of emergencies and disasters and to improve KAU resilience through modern technologies, integrating activities and provision of information.</string>
    <string name="objectives">Objectives</string>
    <string name="edc_objectives1">1- A comprehensive center at KAU equipped with appropriate technologies and resources to deal with all stages of emergencies and disasters (before, during and after).
    </string>
    <string name="edc_objectives2">2- To reduce the losses of lives and properties associated with emergencies and disasters.
    </string>
    <string name="edc_objectives3">3- To improve KAU readiness to control potential hazards and to enhance the recovery activities.
    </string>
    <string name="edc_objectives4">4- To streamline KAU activities through a comprehensive and scientific approach to ease and synchronize emergency and disaster field operations.
    </string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="v1">Floods</string>
    <string name="v2">Earthquek</string>
    <string name="v3">Evacuation</string>
    <string name="email_us">Theedc.kau@gmail.com</string>
    <string name="copy">All Rights Reserved @2018</string>
    <string name="verion">Version : 1</string>
    <!-- relered to assemply pages-->
    <string name="AssemblyPoint">Assembly Point</string>
    <string name="AssemblyName">Assembly Name</string>
    <string name="Save">Save</string>
    <string name="ShelterSite">Shelter Site</string>
    <string name="ShelterName">Shelter Name</string>
    <string name="Type">Type</string>
    <string name="Status">Status</string>
    <string name="Capacity">Capacity</string>
    <string name="Description">Description</string>
    <string name="AssemblyPoints">Assembly Points</string>
    <string name="Assemblypoint">Assembly point</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Sheltersite">Shelter site</string>
</resources>

