<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context="com.kaugirls.dalal.theedc.aboutEDC">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="21dp"
            android:text="@string/textView"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@+id/homebut"
            android:clickable="true"
            android:text="@string/textView2"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />


        <ImageButton
            android:id="@+id/homebut"
            android:layout_width="32dp"
            android:layout_height="47dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/backbutt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029"
            app:srcCompat="@drawable/backbutton" />

        <ImageView
            android:id="@+id/edclogo"
            android:layout_width="114dp"
            android:layout_height="82dp"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/textView4"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.729"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.062"
            app:srcCompat="@drawable/edclogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_goals"
                android:layout_width="182dp"
                android:layout_height="27dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="220dp"
                android:background="@drawable/shape"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.311" />

            <TextView
                android:layout_width="347dp"
                android:layout_height="82dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="35dp"
                android:lines="4"
                android:text="@string/about_us_text"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:layout_marginTop="200dp"
                android:lines="4"
                android:text="@string/email_us"
                android:textColor="#777696"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="175dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:lines="4"
                android:text="@string/copy"
                android:textColor="#777696"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="108dp"
                android:lines="4"
                android:text="@string/verion"
                android:textColor="#777696"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>