<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context="com.kaugirls.dalal.theedc.aboutEDC">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/homebut"
            android:text="@string/textView"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.952"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029" />

        <ImageView
            android:id="@+id/edclogo"
            android:layout_width="114dp"
            android:layout_height="82dp"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/textView4"
            android:textAlignment="center"
            app:srcCompat="@drawable/edclogo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:text="@string/textView2"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />


        <ImageButton
            android:id="@+id/homebut"
            android:layout_width="32dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/backbutt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029"
            app:srcCompat="@drawable/backbutton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_goals"
                android:layout_width="182dp"
                android:layout_height="27dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape3"
                android:text="@string/vision"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.175" />

            <TextView
                android:layout_width="347dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:lines="4"
                android:text="@string/edc_vision"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.257" />

            <TextView
                android:layout_width="182dp"
                android:layout_height="27dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape3"
                android:text="@string/mission"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.337" />

            <TextView
                android:layout_width="347dp"

                android:layout_height="81dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:lines="4"
                android:text="@string/edc_mission"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.434" />


            <TextView
                android:layout_width="182dp"
                android:layout_height="27dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape3"
                android:text="@string/objectives"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.543" />


            <TextView
                android:layout_width="347dp"
                android:layout_height="38dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:lines="4"

                android:text="@string/edc_objectives2"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.832" />

            <TextView
                android:layout_width="347dp"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:lines="4"
                android:text="@string/edc_objectives1"

                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.739" />

            <TextView
                android:layout_width="347dp"
                android:layout_height="65dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:lines="4"
                android:text="@string/edc_objectives3"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


        </LinearLayout>

    </RelativeLayout>


</ScrollView>