<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.kaugirls.dalal.theedc.Delete_AssemblyActivity">

    <TextView
        android:id="@+id/textView4"
        style="@style/font_theEDC"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/Assemblypoint"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorLink="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <EditText
        android:id="@+id/Assembly_Name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/AssemblyName"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Delete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/update"
        android:layout_alignStart="@+id/update"
        android:layout_below="@+id/update"
        android:background="@drawable/shape2"
        android:text="@string/Delete" />

    <Button
        android:id="@+id/update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/isEnable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape3"
        android:text="@string/Update" />

    <Switch
        android:id="@+id/isEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="isEnable" />


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/Assembly_Name"
        android:layout_alignStart="@+id/Assembly_Name"
        android:layout_below="@+id/Assembly_Name"
        android:layout_marginTop="9dp" />


</RelativeLayout>
